--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <br> <!-- break -->
 
       <p  style="font-size:small" class = "linespace">
-        This web map is generated using the <a href="http://leafletjs.com/">LeafletJS</a> web mapping library, and all rendering of data and visualization of points is performed by <a href="http://leafletjs.com/">LeafletJS</a> on the client device. Basemap tiles are sourced from <a href="https://www.mapbox.com/">Mapbox</a>, using <a href="https://www.openstreetmap.org/#map=5/51.500/-0.100">OpenStreetMap</a> data. All advanced geospatial analysis within the map are computed using functions from the <a href="http://turfjs.org/">Turf.JS</a> library.
+        This web map is generated using the <a href="http://leafletjs.com/">LeafletJS</a> web mapping library, and all rendering of data and visualization of points is performed by <a href="http://leafletjs.com/">LeafletJS</a> on the client device. Basemap tiles are sourced from <a href="https://www.mapbox.com/">Mapbox</a>, using <a href="https://www.openstreetmap.org/#map=5/51.500/-0.100">OpenStreetMap</a> data. All advanced geospatial analysis within the map are computed using functions from the <a href="http://turfjs.org/">Turf.JS</a> library. Link to the JS Docs can be found <a href="docs/index.html">here<a/>.
       </p>
     </div>
 
